--- a/views/jewellerysubmenu.html
+++ b/views/jewellerysubmenu.html
@@ -8,14 +8,22 @@
                     <a href="#/category/2">Necklaces</a>
                 </li>
                 <li>
+                    <a href="#/category/36">Pendants</a>
+                </li>
+                <li>
                     <a href="#/category/3">Bracelets</a>
                 </li>
                 <li>
                     <a href="#/category/4">Earrings</a>
                 </li>
                 <li>
+                    <a href="#/category/37">Earcuffs</a>
+                </li>
+                <li>
                     <a href="#/category/5">Rings</a>
                 </li>
+                
+                
             </ul>
         </div>
       
