--- a/views/navigation.html
+++ b/views/navigation.html
@@ -16,7 +16,7 @@
             </li-->
 
             <li ng-mouseover="showsub(0)" ng-mouseleave="hidesub(0)" style="position:relative;">
-                <a href="#/category/1">Jewellery</a>
+                <a href="#/subjewellery">Jewellery</a>
                 <div class="megamenu megamenu2" ng-include src="submenuval[0]" ng-show="submenu[0]">
                 </div>
             </li>
@@ -39,8 +39,10 @@
 
             <li ng-mouseover="showsub(6)" ng-mouseleave="hidesub(6)">
                 <a   href="#/contact">#asklyla</a>
+<!--
                 <div class="megamenu" ng-include src="submenuval[6]" ng-show="submenu[6]">
                 </div>
+-->
             </li>
         </ul>
     </div>
