--- a/views/category.html
+++ b/views/category.html
@@ -13,6 +13,7 @@
             <div class="col-xs-4"></div>
             <div class="col-xs-4">
 
+<!--
                 <div class="pull-right" ng-controller="filterctrl">
                     <a class="btn btn-default" ng-mouseover="showfilter(0)" ng-mouseleave="hidefilter(0)">Filters{{demo}}
                        <div class="" ng-include src="filterval[0]" ng-show="filters[0]"></div>
@@ -22,10 +23,12 @@
 
 
                 </div>
+-->
 
             </div>
         </div>
     </div>
+
     <div class="maincontent">
 
         <div infinite-scroll='addMoreItems();' ng-style="productsheight">
@@ -49,7 +52,7 @@
                         <a href="#/product/{{product.id}}">
                             <h5 ng-show="(accesslevel!=3)">{{product.price|convertprice}}</h5>
                             <h5 ng-show="(accesslevel==3)">{{product.wholesaleprice|convertprice}}</h5>
-                            <!--h5 class="discountprice">£ {{product.price}}</h5-->
+                            h5 class="discountprice">£ {{product.price}}</h5
                         </a>
                     </div>
                 </div>
