--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -129,26 +129,39 @@ input:focus {
 }
 .iosicon {
     -webkit-filter: grayscale(1);
+    filter: grayscale(1);
     opacity: 0.7;
     -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
 }
 .androidicon {
     -webkit-filter: grayscale(1);
+    filter: grayscale(1);
     opacity: 0.4;
     -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
 }
 .iosicon:hover,
 .androidicon:hover {
     -webkit-filter: grayscale(0);
+    filter: grayscale(0);
     opacity: 1;
 }
 .socialicons {
     width: 60px;
     margin-top: 22px;
     -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
 }
 .socialicons:hover {
     -webkit-filter: grayscale(0);
+    filter: grayscale(0);
     opacity: 1;
     zoom: 1.1;
 }
@@ -179,9 +192,18 @@ input:focus {
 .product .img2 {
     position: absolute;
     top: 0px;
+    left: 50%;
     z-index: 10;
     opacity: 1;
     -webkit-transition: all 1.3s;
+    -moz-transition: all 1.3s;
+    -o-transition: all 1.3s;
+    transition: all 1.3s;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%)
 }
 .product .img2:hover {
     opacity: 0;
@@ -487,10 +509,16 @@ button.home-btn:focus {
     background: #fcfcfc;
     opacity: 0;
     -webkit-transition: all 700ms;
+    -moz-transition: all 700ms;
+    -o-transition: all 700ms;
+    transition: all 700ms;
 }
 .maincontent:hover .lookdetails {
     opacity: 1;
     -webkit-transition: all 700ms;
+    -moz-transition: all 700ms;
+    -o-transition: all 700ms;
+    transition: all 700ms;
 }
 h5.pricecolor {
     color: #FFABD3;
@@ -515,6 +543,9 @@ h5.pricecolor {
     border-top: 20px solid #ccc;
     float: left;
     -webkit-transition: all 700ms;
+    -moz-transition: all 700ms;
+    -o-transition: all 700ms;
+    transition: all 700ms;
     opacity: .5;
 }
 .hori-item:hover {
@@ -525,6 +556,9 @@ h5.pricecolor {
 .hori-item.active {
     border-color: #AAA;
     -webkit-transition: all 700ms;
+    -moz-transition: all 700ms;
+    -o-transition: all 700ms;
+    transition: all 700ms;
     background: white;
     opacity: 1;
 }
@@ -553,6 +587,7 @@ h5.pricecolor {
     width: 300px;
     overflow: hidden;
     height: 300px;
+    margin: 0 auto;
 }
 .megamenu img {
     width: 75%;
@@ -866,20 +901,22 @@ span.cartspace {
     color: #898989;
 }
 .breadcrumb {
-padding: 10px 5px;
-margin-bottom: 20px;
-list-style: none;
-color: #A8A8A8;
-border-radius: 0;
-line-height: 28px;
-zoom: 0.9;
-display: none;
+    padding: 10px 5px;
+    margin-bottom: 20px;
+    list-style: none;
+    color: #A8A8A8;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    line-height: 28px;
+    zoom: 0.9;
+    display: none;
 }
 .socialbigs {
-text-align: center;
-font-family: "CheddarJack";
-font-size: 40px;
-background: #efc7cf;
-padding: 67px 0;
-margin: 10px;
+    text-align: center;
+    font-family: "CheddarJack";
+    font-size: 40px;
+    background: #efc7cf;
+    padding: 67px 0;
+    margin: 10px;
 }
