--- a/views/category.html
+++ b/views/category.html
@@ -52,7 +52,7 @@
                         <a href="#/product/{{product.id}}">
                             <h5 ng-show="(accesslevel!=3)">{{product.price|convertprice}}</h5>
                             <h5 ng-show="(accesslevel==3)">{{product.wholesaleprice|convertprice}}</h5>
-                            h5 class="discountprice">£ {{product.price}}</h5
+<!--                            <h5 class="discountprice">£ {{product.price}}</h5>-->
                         </a>
                     </div>
                 </div>
