--- a/views/content.html
+++ b/views/content.html
@@ -1,5 +1,5 @@
     <div class="slidesel" >
-        <div skrollr class="row marginer"  data-0="opacity:1;margin-top:0px;margin-bottom:0px;" data-500="opacity:0.0;margin-top:500px;margin-bottom:-500px;">
+        <div  class="row marginer"  >
             <div class="col-xs-12 wow fadeInLeft">
                 <a href="#/category/1#JEWELLERY"><center><img src="img/logo.jpg"></center></a>
             </div>
