--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -1,5 +1,5 @@
 <div ng-controller="navigationctrl">
-    <div class="navigation fadeInDown" skrollr class="row marginer" data-0="opacity:1;margin-top:0px;margin-bottom:0px;" data-500="opacity:0;margin-top:500px;margin-bottom:-500px;">
+    <div class="navigation fadeInDown">
         <center>
             <ul class="nav nav-pills font mainmenu" ng-class="ishome">
 
