--- a/views/subjewellery.html
+++ b/views/subjewellery.html
@@ -18,24 +18,24 @@
            <div class="maincontent">
         <div class="row">
             <div class="col-md-4">
-                <a href="#/category/2" target="_self"><div class="socialbigs">Necklaces</div>
+                <a href="#/category/2" target="_self"><div class="socialbigs"><img src="img/lyla-neck.jpg">Necklaces</div></a>
             </div>
             <div class="col-md-4">
-                <a href="#/category/36" target="_self"><div class="socialbigs">Pendants</div></a>
+                <a href="#/category/36" target="_self"><div class="socialbigs"><img src="img/lyla-pend.png">Pendants</div></a>
             </div>
             <div class="col-md-4">
-               <a href="#/category/3" target="_self"><div class="socialbigs">Bracelets</div></a>
+               <a href="#/category/3" target="_self"><div class="socialbigs"><img src="img/lyla-bras.png">Bracelets</div></a>
             </div>
             </div>
             <div class="row">
            <div class="col-md-4">
-                <a href="#/category/4" target="_self"><div class="socialbigs">Earrings</div>
+               <a href="#/category/4" target="_self"><div class="socialbigs"><img src="img/lyla-eri.png">Earrings</div></a>
             </div>
             <div class="col-md-4">
-                <a href="#/category/37" target="_self"><div class="socialbigs">Earcuffs</div>
+                <a href="#/category/37" target="_self"><div class="socialbigs"><img src="img/lyla-bras.png">Earcuffs</div></a>
             </div>
            <div class="col-md-4">
-                <a href="#/category/5" target="_self"><div class="socialbigs">Rings</div>
+               <a href="#/category/5" target="_self"><div class="socialbigs"><img src="img/lyla-ring.png"><br>Rings   </div></a>
             </div>
         </div>
 
