--- a/views/category.html
+++ b/views/category.html
@@ -60,4 +60,4 @@
         </div>
     </div>
 </div>
-<a skrollr class="gototop btn btn-default" data-0="opacity:0;" data-1000="opacity:1;" ng-click="gototop();"><span class="glyphicon glyphicon-chevron-up"></span></a>
+<a  ng-click="gototop();"><span class="glyphicon glyphicon-chevron-up"></span></a>
