--- a/views/navigation.html
+++ b/views/navigation.html
@@ -36,6 +36,11 @@
                 <a href="#/lylaloves">lyla loves...</a>
                 
             </li>
+                <li>
+                    <a class="" href="#/lookbook">lookbook</a>
+
+                </li>
+
 
             <li ng-mouseover="showsub(6)" ng-mouseleave="hidesub(6)">
                 <a   href="#/contact">#asklyla</a>
