--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -33,6 +33,10 @@
                     <a class="" href="#/lylaloves">lyla loves...</a>
 
                 </li>
+                 <li>
+                    <a class="" href="#/lookbook">lookbook</a>
+
+                </li>
 
                 <li ng-mouseover="showsub(6)" ng-mouseleave="hidesub(6)">
                     <a href="#/contact">#asklyla</a>
