--- a/views/subjewellery.html
+++ b/views/subjewellery.html
@@ -32,7 +32,7 @@
                <a href="#/category/4" target="_self"><div class="socialbigs"><img src="img/lyla-eri.png">Earrings</div></a>
             </div>
             <div class="col-md-4">
-                <a href="#/category/37" target="_self"><div class="socialbigs"><img src="img/lyla-bras.png">Earcuffs</div></a>
+                <a href="#/category/37" target="_self"><div class="socialbigs"><img src="img/earcruf.jpg">Earcuffs</div></a>
             </div>
            <div class="col-md-4">
                <a href="#/category/5" target="_self"><div class="socialbigs"><img src="img/lyla-ring.png"><br>Rings   </div></a>
