--- a/views/checkout.html
+++ b/views/checkout.html
@@ -57,7 +57,7 @@
 
                                         </div>
                                     </div>
-                                    <button class="btn btn-primary pull-right" ng-click="continuebilling()" ng-show="buttonsvalidate.billing==0">Continue</button>
+                                    <button class="btns btnss-primary pull-right" ng-click="continuebilling()" ng-show="buttonsvalidate.billing==0">Continue</button>
                                 </div>
 
                             </div>
@@ -390,7 +390,7 @@
                                         <input type="radio" name="shippdifferent" ng-model="form.shipdifferent" value="1">Ship to this address
                                         <br>
                                         <input type="radio" name="shippdifferent" ng-model="form.shipdifferent" value="2">Ship to different address</p>
-                                    <button class="btn btn-primary pull-right" ng-click="continueshipping()" ng-show="buttonsvalidate.shipping==0">Continue</button>
+                                    <button class="btns btnss-primary pull-right" ng-click="continueshipping()" ng-show="buttonsvalidate.shipping==0">Continue</button>
                                     <div class="clearfix"></div>
                                 </div>
 
