--- a/views/cart.html
+++ b/views/cart.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <div class="contenttop">
+    <div class="contenttops">
         <div class="row">
             <div class="col-xs-4">
                 <span class="breadcrumb">
@@ -45,7 +45,7 @@
             <p>
                 <input type="text" placeholder="Enter your coupon code" ng-model="couponcode" class="discountcoupon form-control newsletteremail " style="margin-right:5px;"><a class="btn btn-primary {{'valid'+validcouponcode}}" ng-click="checkcoupon(couponcode)"><span ng-hide="validcouponcode==1">Apply Coupon</span> <span ng-show="validcouponcode==1">Coupon Code Applied</span></a>
 
-                <a href="#/checkout" class="btn btn-primary pull-right">Proceed to checkout</a>
+                <a href="#/checkout" class="btns btns-primary pull-right">Proceed to checkout</a>
             </p>
 
             <div class="checkout row">
