--- a/views/content.html
+++ b/views/content.html
@@ -1,7 +1,7 @@
     <div class="slidesel" >
         <div  class="row marginer"  >
             <div class="col-xs-12 wow fadeInLeft">
-                <a href="#/category/1#JEWELLERY"><center><img src="img/logo.jpg"></center></a>
+                <a href="#/category/1#JEWELLERY"><center><img src="img/logo.jpg" title="Lyla Loves Logo" alt="Lyla Loves"></center></a>
             </div>
        </div>
 
