--- a/views/headerhome.html
+++ b/views/headerhome.html
@@ -82,19 +82,19 @@ i
 
             <center>
                 <a href="http://instagram.com/lyla_loves" target="_blank">
-                    <img src="img/insta.png" class="socialicons">
+                    <img src="img/insta.png" title="Lyla Loves Instagram" alt="lyla_loves" class="socialicons">
                 </a>
                 <a href="https://twitter.com/lyla_loves" target="_blank">
-                    <img src="img/twitter.png" class="socialicons">
+                    <img src="img/twitter.png" title="Lyla Loves Twitter" alt="@lyla_loves" class="socialicons">
                 </a>
                 <a href="https://www.facebook.com/lylaloves" target="_blank">
-                    <img src="img/facebook.png" class="socialicons">
+                    <img src="img/facebook.png" title="Lyla Loves Facebook" alt="Lyla Loves (Jewelry/Watches)" class="socialicons">
                 </a>
                 <a href="http://www.pinterest.com/lloves1548/" target="_blank">
-                    <img src="img/pinterest.png" class="socialicons">
+                    <img src="img/pinterest.png" title="Lyla Loves Instagram" alt="LLoves1548" class="socialicons">
                 </a>
                 <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
-                    <img src="img/tumbler.png" class="socialicons">
+                    <img src="img/tumbler.png" title="Lyla Loves Instagram" alt="LylaLovesBlogs" class="socialicons">
                 </a>
 <!--
 				<a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
