--- a/views/slider.html
+++ b/views/slider.html
@@ -1,7 +1,7 @@
 
 
 <div class="productset">
-    <img src="img/pick.png" alt="" style="margin: 20px auto 0;display: block;">
+    <img src="img/pick.png" title="Picks of the Week" alt="Lyla Loves Jewellery London" style="margin: 20px auto 0;display: block;">
     <div class="imageset">
         <a ng-click="slidesetprev(showslideset1);">
             <div class="toggle left">
@@ -37,7 +37,7 @@
 
 </div>
 <div class="productset">
-    <img src="img/butterfly.png" alt="" class="butterfly">
+    <img src="img/butterfly.png" alt="Lyla Loves" title="Lyla Loves Butterfly Logo" class="butterfly">
 
 
 </div>
