--- a/views/product.html
+++ b/views/product.html
@@ -16,7 +16,7 @@
         <div class="affixposition  wow fadeInLeft" data-spy="affix" data-offset-top="0">
             <div class="productdetails pull-right">
                 <div class="productheader">
-                    <h5>{{product.name}}</h5> 
+                    <h5>{{product.name}}</h5>
                     <h4>{{rate|convertprice}}</h4>
                     <!--h4 class="discountprice">£ 400</h4-->
                     <h6 ng-show="product.quantity<=0">OUT OF STOCK</h6>
@@ -36,7 +36,7 @@
                         
                         <span ng-hide="addedtowaitinglist"><input type="email" value="1" class="form-control waitingemail" placeholder="Email" style="width:190px;" ng-model="product.waitingemail">
                             <a class="btn btn-primary " ng-click="addtowaitinglist(product.id,product.waitingemail)">Add to Waiting List</a></span>
-                        <span ng-show="addedtowaitinglist">You have been added to waiting list</span>
+                    <span ng-show="addedtowaitinglist">You have been added to waiting list</span>
                     </span>
 
 
@@ -69,55 +69,84 @@
                         </div>
                     </div>-->
                      <!--<img src="{{image.image|imagepath}}"  class=" imgback wow fadeInLeft" resizable ng-style="{  height: windowHeight }">-->
-            <div class="row" ng-show="productimage[0].image">
-                        <div class="col-md-6">
+                     
+                     <div class="col-md-12">
+                     <div class="row">
+                     <div class="col-md-3">
+            <div  ng-show="productimage[0].image" class="set-im">
+                        
 <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
                          
-                            <img  ng-src="{{productimage[0].image|imagepathbig}}" style="max-height:650px;"    class=" imgback wow fadeInLeft zoomimg" />
+                            <img  ng-src="{{productimage[0].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />
                           </div>
                     </div>
-            <div class="row" ng-show="productimage[1].image">
-                <div class="col-md-6">
+                    <div class="col-md-3">
+            <div  ng-show="productimage[1].image" class="set-im">
+                
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img   ng-src="{{productimage[1].image|imagepathbig}}" style="max-height:650px;"   class=" imgback wow fadeInLeft zoomimg" />
+                    <img   ng-src="{{productimage[1].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />
                 </div>
             </div>
-            <div class="row" ng-show="productimage[2].image">
-                <div class="col-md-6">
+            <div class="col-md-6"></div>
+            </div>
+            </div>
+            
+            <div class="col-md-12">
+            <div class-="row">
+             <div class="col-md-3">
+            <div class="set-im" ng-show="productimage[2].image">
+               
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[2].image|imagepathbig}}" style="max-height:650px;"   class=" imgback wow fadeInLeft zoomimg" />
+                    <img  ng-src="{{productimage[2].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />
                 </div>
             </div>
-            <div class="row" ng-show="productimage[3].image">
-                <div class="col-md-6">
+            <div class="col-md-3">
+            <div class="set-im" ng-show="productimage[3].image">
+                
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[3].image|imagepathbig}}" style="max-height:650px;"  class=" imgback wow fadeInLeft zoomimg" />
+                    <img  ng-src="{{productimage[3].image|imagepathbig}}" style="max-height:310px;"  class=" imgback wow fadeInLeft zoomimg" />
                 </div>
             </div>
-            <div class="row" ng-show="productimage[4].image">
-                <div class="col-md-6">
+            <div class="col-md-6"></div>
+            </div>
+            </div>
+            
+            <div class="col-md-12">
+            <div class="row">
+            <div class="col-md-6">
+            <div class="set-im" ng-show="productimage[4].image">
+                
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[4].image|imagepathbig}}" style="max-height:650px;"    class=" imgback wow fadeInLeft zoomimg" />
+                    <img  ng-src="{{productimage[4].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />
                 </div>
             </div>
-            <div class="row" ng-show="productimage[5].image">
-                <div class="col-md-6">
+            <div class="col-md-6">
+            <div class="set-im" ng-show="productimage[5].image">
+                
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[5].image|imagepathbig}}" style="max-height:650px;"   class=" imgback wow fadeInLeft zoomimg" />
+                    <img  ng-src="{{productimage[5].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />
                 </div>
             </div>
-            <div class="row" ng-show="productimage[6].image">
-                <div class="col-md-6">
+                <div class="col-md-6"></div>
+            </div>
+            </div>
+            
+            <div class="col-md-12"> 
+               <div class="col-md-3">          
+                <div class="set-im" ng-show="productimage[6].image">
+                
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img ng-src="{{productimage[6].image|imagepathbig}}" style="max-height:650px;"    class=" imgback wow fadeInLeft zoomimg" />
+                    <img ng-src="{{productimage[6].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />
                 </div>
             </div>
+              </div>
+
                </span>
 
 
