--- a/views/header.html
+++ b/views/header.html
@@ -73,7 +73,7 @@
     <div class="row">
         <div class="col-xs-3">
             <div myfirstloadclass class="logo fadeInRight">
-                <a href="#/home" class="" ng-class="ishome" id="totop">
+                <a ng-click="template.gourl('/home');" class="" ng-class="ishome" id="totop">
                     <img src="img/logo.jpg" />
                 </a>
             </div>
@@ -114,7 +114,7 @@
         </div-->
         <div class="col-xs-3">
             <div myfirstloadclass class="headerright fadeInRight">
-                <a href="#/home" class="" ng-class="ishome">
+                <a ng-click="template.gourl('/home');" class="" ng-class="ishome">
                     <img src="img/butterfly.png" alt="" class="butterfly-top">
                 </a>
                 <!--div class="col-xs-8 col-xs-offset-4">
