--- a/views/jewellerysubmenu.html
+++ b/views/jewellerysubmenu.html
@@ -5,22 +5,22 @@
             
             <ul class="submenudown">
                 <li>
-                    <a href="#/category/2">Necklaces</a>
+                    <a ng-click="template.gourl('/category/2');">Necklaces</a>
                 </li>
                 <li>
-                    <a href="#/category/36">Pendants</a>
+                    <a ng-click="template.gourl('/category/36');">Pendants</a>
                 </li>
                 <li>
-                    <a href="#/category/3">Bracelets</a>
+                    <a ng-click="template.gourl('/category/3');">Bracelets</a>
                 </li>
                 <li>
-                    <a href="#/category/4">Earrings</a>
+                    <a ng-click="template.gourl('/category/4');">Earrings</a>
                 </li>
                 <li>
-                    <a href="#/category/37">Earcuffs</a>
+                    <a ng-click="template.gourl('/category/37');">Earcuffs</a>
                 </li>
                 <li>
-                    <a href="#/category/5">Rings</a>
+                    <a ng-click="template.gourl('/category/5');">Rings</a>
                 </li>
                 
                 
