--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -4,7 +4,7 @@
             <ul class="nav nav-pills font mainmenu" ng-class="ishome">
 
                 <li>
-                    <a href="#/category/31">Just In</a>
+                    <a ng-click="template.gourl('/category/31');">Just In</a>
 
                 </li>
                 <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
@@ -14,13 +14,13 @@
 </li-->
 
                 <li ng-mouseover="showsub(0)" ng-mouseleave="hidesub(0)" style="position:relative;">
-                    <a href="#/subjewellery">Jewellery</a>
+                    <a ng-click="template.gourl('/subjewellery')">Jewellery</a>
                     <div class="megamenu megamenu2" ng-include src="submenuval[0]" ng-show="submenu[0]">
                     </div>
                 </li>
                 
                 <li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)" style="position:relative;">
-                <a href="#/category/6">Accesories</a>
+                <a ng-click="template.gourl('/category/6');">Accesories</a>
                 <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
@@ -30,16 +30,16 @@
 </div>
 </li-->
                 <li>
-                    <a class="" href="#/lylaloves">lyla loves...</a>
+                    <a class="" ng-click="template.gourl('/lylaloves');">lyla loves...</a>
 
                 </li>
                  <li>
-                    <a class="" href="#/lookbook">lookbook</a>
+                    <a class="" ng-click="template.gourl('/lookbook');">lookbook</a>
 
                 </li>
 
                 <li ng-mouseover="showsub(6)" ng-mouseleave="hidesub(6)">
-                    <a href="#/contact">#asklyla</a>
+                    <a ng-click="template.gourl('/contact');">#asklyla</a>
 <!--
                     <div class="megamenu" ng-include src="submenuval[6]" ng-show="submenu[6]">
                     </div>
