--- a/views/accessoriessubmenu.html
+++ b/views/accessoriessubmenu.html
@@ -5,16 +5,16 @@
 
             <ul class="submenudown">
                 <li>
-                    <a href="#/category/7">Bags</a>
+                    <a ng-click="template.gourl('/category/7');">Bags</a>
                 </li>
                 <li>
-                    <a href="#/category/8">Scarves</a>
+                    <a ng-click="template.gourl('/category/8');">Scarves</a>
                 </li>
                 <li>
-                    <a href="#/category/34">Hair</a>
+                    <a ng-click="template.gourl('/category/34');">Hair</a>
                 </li>
                 <li>
-                    <a href="#/category/35">Phone Cases</a>
+                    <a ng-click="template.gourl('/category/35');">Phone Cases</a>
                 </li>
             </ul>
         </div>
