--- a/views/newinmenu.html
+++ b/views/newinmenu.html
@@ -5,16 +5,16 @@
            
             <ul class="submenudown">
                 <li>
-                    <a href="#/category/33">Necklace</a>
+                    <a ng-click="template.gourl('/category/33');">Necklace</a>
                 </li>
                 <li>
-                    <a href="#/category/3">Bracelets</a>
+                    <a ng-click="template.gourl('/category/3');">Bracelets</a>
                 </li>
                 <li>
-                    <a href="#/category/4">Earings</a>
+                    <a ng-click="template.gourl('/category/4');">Earings</a>
                 </li>
                 <li>
-                    <a href="#/category/5">Rings</a>
+                    <a ng-click="template.gourl('/category/5');">Rings</a>
                 </li>
             </ul>
         </div>
