--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -13,7 +13,7 @@
         <div class="container cart text-center" style="min-height:300px">
 <h3>Purchase Complete</h3>
 <p>Thank you for shopping.</p>   <br>
-<p><a href="#/home"><button class="btn btn-default">Continue Shopping</button></a></p>
+<p><a ng-click="template.gourl('/home');"><button class="btn btn-default">Continue Shopping</button></a></p>
 
         </div>
     </div>
