--- a/views/header.html
+++ b/views/header.html
@@ -74,7 +74,7 @@
         <div class="col-xs-3">
             <div myfirstloadclass class="logo fadeInRight">
                 <a ng-click="template.gourl('/home');" class="" ng-class="ishome" id="totop">
-                    <img src="img/logo.jpg" />
+                    <img src="img/logo.jpg" alt="Lyla Loves" Title="Lyla Loves"/>
                 </a>
             </div>
         </div>
@@ -91,7 +91,8 @@
                     <img src="img/facebook.png" class="socialicons">
                 </a>
                 <a href="http://www.pinterest.com/lloves1548/" target="_blank">
-                    <img src="img/pinterest.png" class="socialicons">
+                    <img src="img/pinterest.png" class="socialicons" title="Lyla Loves
+Pinterest " alt="LLoves1548 ">
                 </a>
                 <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
                     <img src="img/tumbler.png" class="socialicons">
@@ -115,7 +116,7 @@
         <div class="col-xs-3">
             <div myfirstloadclass class="headerright fadeInRight">
                 <a ng-click="template.gourl('/home');" class="" ng-class="ishome">
-                    <img src="img/butterfly.png" alt="" class="butterfly-top">
+                    <img src="img/butterfly.png" alt="" class="butterfly-top" alt="Lyla Loves" title="Lyla Loves">
                 </a>
                 <!--div class="col-xs-8 col-xs-offset-4">
                         <a href="#/Login" class="pulseanimation" ng-mouseover="showaccount()"><span class="glyphicon glyphicon-user"></span>&nbsp; My Account{{demo}}</a> 
