--- a/views/headerhome.html
+++ b/views/headerhome.html
@@ -91,10 +91,10 @@ i
                     <img src="img/facebook.png" title="Lyla Loves Facebook" alt="Lyla Loves (Jewelry/Watches)" class="socialicons">
                 </a>
                 <a href="http://www.pinterest.com/lloves1548/" target="_blank">
-                    <img src="img/pinterest.png" title="Lyla Loves Instagram" alt="LLoves1548" class="socialicons">
+                    <img src="img/pinterest.png" title="Lyla Loves Pinterest" alt="LLoves1548" class="socialicons">
                 </a>
                 <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
-                    <img src="img/tumbler.png" title="Lyla Loves Instagram" alt="LylaLovesBlogs" class="socialicons">
+                    <img src="img/tumbler.png" title="Lyla Loves Blog" alt="LylaLovesBlog" class="socialicons">
                 </a>
 <!--
 				<a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
