--- a/views/subjewellery.html
+++ b/views/subjewellery.html
@@ -18,24 +18,24 @@
            <div class="maincontent">
         <div class="row">
             <div class="col-md-4">
-                <a ng-click="template.gourl('/category/2');" target="_self"><div class="socialbigs"><img src="img/lyla-neck.jpg">Necklaces</div></a>
+                <a ng-click="template.gourl('/category/2');" target="_self"><div class="socialbigs"><img src="img/lyla-neck.jpg" title="Necklaces" alt="Lyla Loves Necklaces">Necklaces</div></a>
             </div>
             <div class="col-md-4">
-                <a ng-click="template.gourl('/category/36');" target="_self"><div class="socialbigs"><img src="img/lyla-pend.png">Pendants</div></a>
+                <a ng-click="template.gourl('/category/36');" target="_self"><div class="socialbigs"><img src="img/lyla-pend.png" title="Pendants" alt="Lyla Loves Pendant Necklaces">Pendants</div></a>
             </div>
             <div class="col-md-4">
-               <a ng-click="template.gourl('/category/3');" target="_self"><div class="socialbigs"><img src="img/lyla-bras.png">Bracelets</div></a>
+               <a ng-click="template.gourl('/category/3');" target="_self"><div class="socialbigs"><img src="img/lyla-bras.png" title="Bracelets" alt="Lyla Loves Bracelets">Bracelets</div></a>
             </div>
             </div>
             <div class="row">
            <div class="col-md-4">
-               <a ng-click="template.gourl('/category/4');" target="_self"><div class="socialbigs"><img src="img/lyla-eri.png">Earrings</div></a>
+               <a ng-click="template.gourl('/category/4');" target="_self"><div class="socialbigs"><img src="img/lyla-eri.png" title="Earrings" alt="Lyla Loves Earrings">Earrings</div></a>
             </div>
             <div class="col-md-4">
-                <a ng-click="template.gourl('/category/37');" target="_self"><div class="socialbigs"><img src="img/earcruf.jpg">Earcuffs</div></a>
+                <a ng-click="template.gourl('/category/37');" target="_self"><div class="socialbigs"><img src="img/earcruf.jpg" title="Earcuffs" alt="Lyla Loves Earcuffs">Earcuffs</div></a>
             </div>
            <div class="col-md-4">
-               <a ng-click="template.gourl('/category/5');" target="_self"><div class="socialbigs"><img src="img/lyla-ring.png"><br>Rings   </div></a>
+               <a ng-click="template.gourl('/category/5');" target="_self"><div class="socialbigs"><img src="img/lyla-ring.png" title="Rings" alt="Lyla Loves Rings"><br>Rings   </div></a>
             </div>
         </div>
 
