--- a/views/footer.html
+++ b/views/footer.html
@@ -1,3 +1,4 @@
+<footer>
 <div class="clearfix"></div>
 <div class="footer">
     <div class="newsletter  fadeInDown {{bottommenu}}" myfirstloadclass data-wow-delay="0.6s">
@@ -87,3 +88,4 @@ margin-right: 133px;">Wholesale</a>
                 </div>
             </div-->
         </div>
+        </footer>
