--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -970,9 +970,62 @@ button.btnss-primary {
 .set-head {
     font-size: 13px;
 }
-.set-im img:hover {
-    -webkit-transform: scale(2);    -moz-transform: scale(2);    -o-transform: scale(2);    transform: scale(2);      position: relative;      
-    left: 30%;      z-index: 999;
-    width: 100%;
-    -webkit-transition: all 1s ease;
+
+.cloud-zoom-lens {
+	border: 4px solid #888;
+	margin:-4px;	/* Set this to minus the border thickness. */
+	background-color:#fff;	
+	cursor:move;		
+}
+
+/* This is for the title text. */
+.cloud-zoom-title {
+	font-family:Arial, Helvetica, sans-serif;
+	position:absolute !important;
+	background-color:#000;
+	color:#fff;
+	padding:3px;
+	width:100%;
+	text-align:center;	
+	font-weight:bold;
+	font-size:10px;
+	top:0px;
+}
+
+/* This is the zoom window. */
+.cloud-zoom-big {
+	border:4px solid #ccc;
+	overflow:hidden;
+}
+
+/* This is the loading message. */
+.cloud-zoom-loading {
+	color:white;	
+	background:#222;
+	padding:3px;
+	border:1px solid #000;
+}
+
+#my-container {
+  width: 270px;
+  height: 170px;
+  border: solid 1px black;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#thumbnails {
+  padding-left: 1px;
+  list-style-type: none;  
+}
+
+#thumbnails li {
+  float: left;
+  margin-right: 5px;
+}
+
+#thumbnails img {
+  width: 50px;
+  height: 50px;
 }
