--- a/views/product.html
+++ b/views/product.html
@@ -12,6 +12,22 @@
             </div>
         </div>
     </div>
+
+    <div>
+
+<!--
+        <div zoom2 big="SelectedItem.big" tiny="SelectedItem.tiny" small="SelectedItem.small" alt="" title="SelectedItem.title"></div>
+
+
+        <div ng-repeat="item in ZoomItems" style="disaplay:block;">
+            <img src="{{item.tiny}}" alt="{{item.alt}}" ng-click="ThumbnailClicked(item)" />
+        </div>
+-->
+
+
+
+    </div>
+
     <div class="maincontent">
         <div class="affixposition  wow fadeInLeft" data-spy="affix" data-offset-top="0">
             <div class="productdetails pull-right">
@@ -73,19 +89,23 @@
                      <div class="col-md-12">
                      <div class="row">
                      <div class="col-md-3">
-            <div  ng-show="productimage[0].image" class="set-im">
+            <div  ng-show="productimage[0].image">
                         
 <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
                          
-                            <img  ng-src="{{productimage[0].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />
+<!--                            <img  ng-src="{{productimage[0].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />-->
+                            
+                            
+                            <div zoom2 big="productimage[0].image|imagepathbig" tiny="productimage[0].image|imagepath" small="productimage[0].image|imagepath" ></div>
                           </div>
                     </div>
                     <div class="col-md-3">
-            <div  ng-show="productimage[1].image" class="set-im">
+            <div  ng-show="productimage[1].image">
                 
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img   ng-src="{{productimage[1].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />
+<!--                    <img   ng-src="{{productimage[1].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />-->
+                <div zoom2 big="productimage[1].image|imagepathbig" tiny="productimage[1].image|imagepath" small="productimage[1].image|imagepath" ></div>
                 </div>
             </div>
             <div class="col-md-6"></div>
@@ -99,7 +119,8 @@
                
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[2].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />
+<!--                    <img  ng-src="{{productimage[2].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />-->
+               <div zoom2 big="productimage[2].image|imagepathbig" tiny="productimage[2].image|imagepath" small="productimage[2].image|imagepath" ></div>
                 </div>
             </div>
             <div class="col-md-3">
@@ -107,7 +128,9 @@
                 
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[3].image|imagepathbig}}" style="max-height:310px;"  class=" imgback wow fadeInLeft zoomimg" />
+<!--                    <img  ng-src="{{productimage[3].image|imagepathbig}}" style="max-height:310px;"  class=" imgback wow fadeInLeft zoomimg" />-->
+               
+                <div zoom2 big="productimage[3].image|imagepathbig" tiny="productimage[3].image|imagepath" small="productimage[3].image|imagepath" ></div>
                 </div>
             </div>
             <div class="col-md-6"></div>
@@ -121,7 +144,8 @@
                 
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[4].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />
+<!--                    <img  ng-src="{{productimage[4].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />-->
+                <div zoom2 big="productimage[4].image|imagepathbig" tiny="productimage[4].image|imagepath" small="productimage[4].image|imagepath" ></div>
                 </div>
             </div>
             <div class="col-md-6">
@@ -129,7 +153,8 @@
                 
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img  ng-src="{{productimage[5].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />
+<!--                    <img  ng-src="{{productimage[5].image|imagepathbig}}" style="max-height:310px;"   class=" imgback wow fadeInLeft zoomimg" />-->
+                <div zoom2 big="productimage[5].image|imagepathbig" tiny="productimage[5].image|imagepath" small="productimage[5].image|imagepath" ></div>
                 </div>
             </div>
                 <div class="col-md-6"></div>
@@ -142,7 +167,8 @@
                 
                     <!--                              <img ng-elevate-zoom ng-src="{{image.image|imagepath}}"  zoom-image="{{image.image|imagepath}}" class=" imgback wow fadeInLeft zoomimg" resizable ng-style="{  height: windowHeight }" />-->
 
-                    <img ng-src="{{productimage[6].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />
+<!--                    <img ng-src="{{productimage[6].image|imagepathbig}}" style="max-height:310px;"    class=" imgback wow fadeInLeft zoomimg" />-->
+                <div zoom2 big="productimage[6].image|imagepathbig" tiny="productimage[6].image|imagepath" small="productimage[6].image|imagepath" ></div>
                 </div>
             </div>
               </div>
