--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -46,7 +46,7 @@ body {
     height: 135px;
 }
 .newbadge {
-    background-color: rgb(39, 240, 232);
+    background-color: rgb(58, 253, 231);
     position: absolute;
     margin-left: 18px;
     /* margin-top: 52px; */
@@ -972,7 +972,7 @@ button.btnss-primary {
 }
 
 .cloud-zoom-lens {
-	border: 4px solid #888;
+	border: 0px solid #888;
 	margin:-4px;	/* Set this to minus the border thickness. */
 	background-color:#fff;	
 	cursor:move;		
@@ -994,7 +994,7 @@ button.btnss-primary {
 
 /* This is the zoom window. */
 .cloud-zoom-big {
-	border:4px solid #ccc;
+	border: 0px solid #ccc;
 	overflow:hidden;
 }
 
@@ -1029,3 +1029,23 @@ button.btnss-primary {
   width: 50px;
   height: 50px;
 }
+.cart-set {
+    position: fixed;
+    right: 0px;
+    bottom: 5px;
+    font-size: 16px;
+    background: rgba(216, 242, 239, 1);
+    padding: 1px 10px 0px 10px;
+    border-radius: 0px;
+    z-index: 999999;
+    float: right;
+}
+.cart-set img {
+    height: 30px;
+}
+/*
+.cart-set:after {
+    content: '';    position: absolute;    border-style: solid;    border-width: 7px 0px 7px 14px;    
+    border-color: transparent #03E1E4;    display: block;    width: 0;    z-index: 2;    
+    top: 27px;    right: -14px;
+}*/
