--- a/views/cart.html
+++ b/views/cart.html
@@ -1,5 +1,22 @@
 <div class="content">
     <div class="contenttops">
+       <div class="container">
+           <div class="row">
+            <div class="col-md-3"></div>
+            
+               <div class="col-md-6">
+                   <div class="step-set">
+                       <ul>
+                           <li class="active">My Bag</li>
+                           <li>Payment & Billing</li>
+                           <li>Summary</li>
+                           <li style="border-right:none;">Complete</li>
+                       </ul>
+                   </div>
+               </div>
+               <div class="col-md-3"></div>
+           </div>
+       </div>
         <div class="row">
             <div class="col-xs-4">
                 <span class="breadcrumb">
