--- a/views/checkout.html
+++ b/views/checkout.html
@@ -1,5 +1,23 @@
 <div class="content">
     <div class="contenttop">
+              <div class="container">
+           <div class="row">
+            <div class="col-md-2"></div>
+            
+               <div class="col-md-8">
+                   <div class="step-set">
+                       <ul>
+                         <a ng-click="template.gourl('/cart');" > <li >My Bag</li></a>
+                           <a ng-click="template.gourl('/checkout');" ><li class="active">Collection Or Delivery</li></a>
+                           <a href=""><li>Payment & Billing</li></a>
+                           <a href=""><li>Summary</li></a>
+                           <a href=""><li style="border-right:none;">Complete</li></a>
+                       </ul>
+                   </div>
+               </div>
+               <div class="col-md-2"></div>
+           </div>
+       </div>
         <div class="row">
             <div class="col-xs-4">
                 <span class="breadcrumb">
