--- a/views/footer.html
+++ b/views/footer.html
@@ -4,7 +4,9 @@
     <div class="newsletter  fadeInDown {{bottommenu}}" myfirstloadclass data-wow-delay="0.6s">
         <div class="row">
             <div class="col-xs-4">
-                <div class="text-center fotternav"><a ng-click="template.gourl('/returns')" ng-class="returnsactive">RETURNS</a> &nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;<a ng-click="template.gourl('/delivery')" ng-class="deliveryactive">DELIVERY</a>
+                <div class="text-center fotternav">
+<!--                <a ng-click="template.gourl('/about')" ng-class="returnsactive">ABOUT LYLA</a> &nbsp;&nbsp;&nbsp;|-->
+                 &nbsp;&nbsp;&nbsp;<a ng-click="template.gourl('/returns')" ng-class="returnsactive">RETURNS</a> &nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;<a ng-click="template.gourl('/delivery')" ng-class="deliveryactive">DELIVERY</a>
                 </div>
             </div>
             <div class="col-xs-2">
