--- a/views/product.html
+++ b/views/product.html
@@ -177,6 +177,48 @@
 
 
     </div>
+<!--
+    <div class="recent-set">
+        
+
+<div class="productset" >
+    <img src="img/pick.png" title="Lyla Loves" alt="Lyla Loves" style="margin: 20px auto 0;display: block;">
+    <div class="imageset">
+        <a ng-click="slidesetprev(showslideset1);">
+            <div class="toggle left">
+                <img src="img/leftbanner.png" alt="" ng-show="showslideset1==1">
+            </div>
+        </a>
+        <a ng-click="slidesetnext(showslideset1);">
+            <div class="toggle right">
+                <img src="img/rightbanner.png" alt="" ng-show="showslideset1==0">
+            </div>
+        </a>
+        <div style="overflow:hidden;height:230px;">
+            <span ng-repeat="slider in sliders">
+                <span ng-show="$index<5" class="pickweek">
+                    <a ng-click="template.gourl('/product/'+slider.link);" ><img src="{{slider.image|imagepath}}" class="slideset1 animated slideInLeft" ng-show="showslideset1==0"></a>
+                    <div class="proprice proprice2">
+                        <a href="#/product/{{product.id}}">
+                            <h5> {{slider.price|convertprice}}</h5>
+                        </a>
+                    </div>
+                </span>
+            <span ng-show="$index>=5" class="pickweek">
+                    <a ng-click="template.gourl('/product/'+slider.link);"><img src="{{slider.image|imagepath}}" class="slideset1 animated slideInRight" ng-show="showslideset1==1"></a>
+                <div class="proprice proprice2">
+                    <a ng-click="template.gourl('/product/'+product.id);">
+                        <h5> {{slider.price|convertprice}}</h5>
+                    </a>
+                </div>
+                </span>
+            </span>
+        </div>
+    </div>
+
+</div>
+    </div>
+-->
 </div>
 <div style="margin-bottom:800px"></div>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
